k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wolf-street-ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since, Cache-Control, Content-Type, Range, Authorization, X-Project-Key"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - http:
        paths:
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /order-service
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8085
          - path: /portfolio-service
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 8083
          - path: /instrument-service
            pathType: Prefix
            backend:
              service:
                name: instrument-service
                port:
                  number: 8091
